# trackr-polhemus-g4

./: .gitignore  readme.md
client/cpp/example/: Makefile  example  example.vcxproj  example.vcxproj.filters  example_linux.cpp  example_win32.cpp
client/cpp/example.cpp/: example.cpp.vcxproj
client/csharp/csharp_example/: Program.cs  csharp_example.csproj
client/csharp/csharp_example/Properties/: AssemblyInfo.cs
client/js/g4/: index.js  package.json
client/js/nodewebkit/: index.html  package.json
client/unity/: G4.cs  G4Sensor.cs
docs/local_docs/: 504B20029.g4d  dual_source_config.g4c  one_source_config.g4c  vr_lab_config.md
docs/local_docs/linux_sdk/: house.json  libG4Track_32.so.0.0.2
docs/local_docs/linux_sdk/SWD-50408-25-1.0.1-G4_Linux_Suite/: G4Manual.doc  README
docs/local_docs/linux_sdk/createcfgfile-1.0.0/: AUTHORS  ChangeLog  Makefile.in  README  config.h.in  configure  configure.ac
docs/local_docs/linux_sdk/createcfgfile-1.0.0/src/: CreateCfgFile.cpp  Quaternion.cpp  Quaternion.h  tooltiptext.h
docs/local_docs/linux_sdk/g4devcfg/: G4DevCfg
docs/local_docs/linux_sdk/g4display-1.0.0/: Makefile.am  Makefile.in  aclocal.m4  config.h.in  configure
docs/local_docs/linux_sdk/g4display-1.0.0/src/: G4Display.cpp  G4Display.h  G4Hub.h  G4Trk.cpp  G4Trk.h  IncrDlg.cpp  Makefile.am  Makefile.in  ModDlg.cpp
docs/local_docs/linux_sdk/g4term-1.0.0/: AUTHORS  ChangeLog  Makefile.in  README  config.h.in  configure
docs/local_docs/linux_sdk/g4term-1.0.0/src/: FrameDlg.cpp  FrameDlg.h  G4Term.cpp  G4Term.h  IncrDlg.cpp  IncrDlg.h  Makefile.am  Makefile.in  ModDlg.h  PingPong.cpp  PingPong.h  UnitsDlg.cpp  UnitsDlg.h
docs/local_docs/linux_sdk/g4track_lib_dist-0.0.2/: README  configure  configure.ac
docs/local_docs/linux_sdk/g4track_lib_dist-0.0.2/include/: G4TrackIncl.h  Makefile.am
docs/local_docs/linux_sdk/g4track_lib_dist-0.0.2/man/: G4SrcCfgLib.3  G4Track.3  G4_CMD_BLOCK_STRUCT.3  G4_CMD_DATA_STRUCT.3  G4_SRC_DATA_STRUCT.3  G4_SRC_MAP.3  Makefile.am  Makefile.in  g4_close_tracker.3  g4_create_source_cfg_file.3  g4_get_frame_data.3  g4_get_freq_sn_from_attr.3  g4_read_source_cfg_file.3
docs/local_docs/linux_sdk/g4track_lib_dist-0.0.2/udev_rules/: Makefile.am  Makefile.in
docs/local_docs/source_a/: A-505B20022.g4s  G4S-Readme.txt
docs/local_docs/source_b/: B-529B20007.g4s
docs/manufacturer_docs/: readme.md
server/linux/: Makefile  trackr  trackr.cpp  trackr.h
server/linux/linux_sdk/SWD-50408-25-1.0.1-G4_Linux_Suite/: G4SrcCfgLib_Manual.doc
server/linux/linux_sdk/createcfgfile-1.0.0/: Makefile.am
server/linux/linux_sdk/createcfgfile-1.0.0/src/: G4SrcCfgIncl.h  Makefile.am  Makefile.in
server/linux/linux_sdk/g4display-1.0.0/: ChangeLog  README  configure.ac
server/linux/linux_sdk/g4display-1.0.0/src/: FilterDlg.cpp  FilterDlg.h  G4Hub.cpp  Quaternion.cpp  Quaternion.h  struct.h
server/linux/linux_sdk/g4term-1.0.0/: configure.ac
server/linux/linux_sdk/g4term-1.0.0/src/: FilterDlg.cpp
server/linux/linux_sdk/g4track_lib_dist-0.0.2/: Makefile  Makefile.am  Makefile.in  config.status  libtool
server/linux/linux_sdk/g4track_lib_dist-0.0.2/include/: Makefile  Makefile.in
server/linux/linux_sdk/g4track_lib_dist-0.0.2/man/: G4_CMD_STRUCT.3  G4_FRAMEDATA.3  G4_SENFRAMEDATA.3  Makefile  g4_init_sys.3  g4_set_query.3
server/linux/linux_sdk/g4track_lib_dist-0.0.2/udev_rules/: 90-Polhemus_trkr_01.rules  Makefile
server/win32/test_socket_server/: test_socket_server.cpp  test_socket_server.vcxproj  test_socket_server.vcxproj.filters
server/win32/trackr/: server.cpp  server.h  tracker_props.h  trackr.cpp  trackr.h  trackr.sln  trackr.vcxproj  trackr.vcxproj.filters
testing_apps/g4_nodewebkit_multisensor/: index.html  package.json
testing_apps/g4_nodewebkit_multisensor/models/: car.js
testing_apps/g4_viewpoint_tracked/: index.html  package.json
