#src/Makefile.am

bin_PROGRAMS=g4display
g4display_SOURCES=FilterDlg.cpp FilterDlg.h G4Display.cpp G4Display.h G4Hub.cpp G4Hub.h G4Trk.cpp G4Trk.h IncrDlg.cpp IncrDlg.h ModDlg.cpp ModDlg.h Quaternion.cpp Quaternion.h struct.h

g4display_CXXFLAGS=$(GTK_CFLAGS) $(GLEXT_CFLAGS)
g4display_LDADD=$(GTK_LIBS) $(GLEXT_LIBS)